--- a/A00246017.opa/meta.yml
+++ b/A00246017.opa/meta.yml
@@ -1,5 +1,5 @@
 id: A00246017
-source: D3879final
+source: https://github.com/Esukhia/chojuk-alignement/tree/master/D3879-final
 source_metadata:
   title: chojuk
   creation_method: proof read
